terraform/blueprints/nginx/reverseproxy/aws/cloudformation/reverseproxy.yml
AWSTemplateFormatVersion: 2010-09-09

Description: A Cloudformation template for provisioning an NGINX reverse proxy stack.

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC used to provision cluster
  VpcCidrBlock:
    Type: String
    Description: VPC CIDR IP range
  ImageId:
    Type: AWS::EC2::Image::Id
    Description: EC2 AMI ID
  InstanceType:
    Type: String
    Description: EC2 instance type
  EC2BurstMode:
    Type: String
    Description: Specifies whether to throttle or charge for CPU credits once allocation is exhausted
    AllowedValues: [standard, unlimited]
    Default: standard
  Environment:
    Type: String
    Description: The name of the environment to associate with
  UserData:
    Type: String
    Description: Bootstrap configuration to run on EC2 instance
  PublicHostedZoneName:
    Type: String
    Description: Public hosted zone for route53 entry
  PrivateHostedZoneName:
    Type: String
    Description: Private hosted zone for route53 entry
  PublicRouteName:
    Type: String
    Description: Public FQDN for the Reverse Proxy instance
  PrivateRouteName:
    Type: String
    Description: Private FQDN for the Reverse Proxy instance

Resources:
  ReverseProxySG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: ReverseProxySG
      GroupDescription: Security group for ReverseProxy
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref VpcCidrBlock
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 53
          ToPort: 53
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 53
          ToPort: 53
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: !Ref VpcCidrBlock
      Tags:
        - Key: Name
          Value: ReverseProxySG

  ReverseProxyEC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - sts:AssumeRole
            Principal:
              Service:
                - ec2.amazonaws.com
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy

  ReverseProxyInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref ReverseProxyEC2Role

  ReverseProxyInstance:
    Type: AWS::EC2::Instance
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          default:
            - 01_setupCfnHup
            - 02_config-amazon-cloudwatch-agent
            - 03_restart_amazon-cloudwatch-agent
          UpdateEnvironment:
            - 02_config-amazon-cloudwatch-agent
            - 03_restart_amazon-cloudwatch-agent
        02_config-amazon-cloudwatch-agent:
          files:
            '/opt/aws/amazon-cloudwatch-agent/etc/amazon-cloudwatch-agent.json':
              content: !Sub |
                {
                  "metrics": {
                    "append_dimensions": {
                      "AutoScalingGroupName": "${!aws:AutoScalingGroupName}",
                      "ImageId": "${!aws:ImageId}",
                      "InstanceId": "${!aws:InstanceId}",
                      "InstanceType": "${!aws:InstanceType}"
                    },
                    "metrics_collected": {
                      "mem": {
                        "measurement": [
                          "mem_used_percent"
                        ]
                      },
                      "swap": {
                        "measurement": [
                          "swap_used_percent"
                        ]
                      }
                    }
                  }
                }
        # Invoke amazon-cloudwatch-agent-ctl to restart the AmazonCloudWatchAgent.
        03_restart_amazon-cloudwatch-agent:
          commands:
            01_stop_service:
              command: /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl -a stop
            02_start_service:
              command: /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl -a fetch-config -m ec2 -c file:/opt/aws/amazon-cloudwatch-agent/etc/amazon-cloudwatch-agent.json -s
        # Cfn-hup setting, it is to monitor the change of metadata.
        # When there is change in the contents of json file in the metadata section, cfn-hup will call cfn-init to restart the AmazonCloudWatchAgent.
        01_setupCfnHup:
          files:
            '/etc/cfn/cfn-hup.conf':
              content: !Sub |
                [main]
                stack=${AWS::StackId}
                region=${AWS::Region}
                interval=1
              mode: '000400'
              owner: root
              group: root
            '/etc/cfn/hooks.d/amazon-cloudwatch-agent-auto-reloader.conf':
              content: !Sub |
                [cfn-auto-reloader-hook]
                triggers=post.update
                path=Resources.EC2Instance.Metadata.AWS::CloudFormation::Init.02_config-amazon-cloudwatch-agent
                action=/opt/aws/bin/cfn-init -v --stack ${AWS::StackId} --resource EC2Instance --region ${AWS::Region} --configsets UpdateEnvironment
                runas=root
              mode: '000400'
              owner: root
              group: root
            "/lib/systemd/system/cfn-hup.service":
              content: !Sub |
                [Unit]
                Description=cfn-hup daemon
                [Service]
                Type=simple
                ExecStart=/opt/aws/bin/cfn-hup
                Restart=always
                [Install]
                WantedBy=multi-user.target
          commands:
            01enable_cfn_hup:
              command: !Sub |
                systemctl enable cfn-hup.service
            02start_cfn_hup:
              command: !Sub |
                systemctl start cfn-hup.service
    Properties:
      IamInstanceProfile: !Ref ReverseProxyInstanceProfile
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      CreditSpecification:
        CPUCredits: !Ref EC2BurstMode
#      KeyName: !Ref KeyPair
      Monitoring: true
      SecurityGroupIds:
        - !Ref ReverseProxySG
#      SsmAssociations:
#        - SSMAssociation
#      SubnetId: !Ref SubnetId
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-reverseproxy
        - Key: Environment
          Value: !Ref Environment
      UserData: !Ref UserData

  ReverseProxyEIP:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref ReverseProxyInstance
      
  ReverseProxyPublicRecordSet:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: !Ref PublicHostedZoneName
      Name: !Ref PublicRouteName
      Type: A
      TTL: '900'
      ResourceRecords:
        - !Ref ReverseProxyEIP

  ReverseProxyPrivateRecordSet:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: !Ref PrivateHostedZoneName
      Name: !Ref PrivateRouteName
      Type: A
      TTL: '900'
      ResourceRecords:
        - !GetAtt ReverseProxyInstance.PrivateIp

  ReverseProxyHealthCheck:
    Type: AWS::Route53::HealthCheck
    Properties:
      HealthCheckConfig:
        FullyQualifiedDomainName: !Ref ReverseProxyPublicRecordSet
        Type: HTTP
        
  ReverseProxyLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub ${Environment}-reverseproxy
      RetentionInDays: 7

#  ReverseProxyDashboard:
#    Type: AWS::CloudWatch::Dashboard
#    Properties:
#      DashboardName: ReverseProxy
#      DashboardBody: !Sub |
#        {}
#
#Outputs:
